changement nom du site

--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -1,5 +1,5 @@
 uuid: c3f03fe5-023f-428f-b2ba-a47a93e3da1a
-name: 'Drush Site-Install'
+name: 'Formation développeur Drupal'
 mail: admin@example.com
 slogan: ''
 page:
