déclaration de permissions

--- a/web/modules/hello_world/hello_world.routing.yml
+++ b/web/modules/hello_world/hello_world.routing.yml
@@ -15,4 +15,4 @@ hello_world.week:
     _title: 'Week'
     _controller: '\Drupal\hello_world\Controller\HelloWorldController::week'
   requirements:
-    _permission: 'access content'
+    _permission: 'access hello page'
