--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -7,11 +7,13 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.comment
     - field.field.node.article.field_image
+    - field.field.node.article.field_ma_date
     - field.field.node.article.field_tags
     - image.style.large
     - node.type.article
   module:
     - comment
+    - datetime
     - image
     - text
     - user
@@ -47,6 +49,15 @@ content:
       image_link: ''
     third_party_settings: {  }
     label: hidden
+  field_ma_date:
+    weight: 111
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
   field_tags:
     type: entity_reference_label
     weight: 10
