--- a/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.comment
     - field.field.node.article.field_image
+    - field.field.node.article.field_ma_date
     - field.field.node.article.field_tags
     - image.style.medium
     - node.type.article
@@ -52,5 +53,6 @@ content:
 hidden:
   comment: true
   field_image: true
+  field_ma_date: true
   field_tags: true
   langcode: true
